ad colored border to navbar

--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -1,7 +1,6 @@
 @use '../partials/variables' as *;
 
 header {
-    padding: 1rem 0;
 
     .logo img {
         width: 3rem;
@@ -10,9 +9,11 @@ header {
     .navbar-nav a {
         font-size: 0.8rem;
         color: $darker;
+        border-bottom: 2px solid transparent;
 
         &:hover {
             color: $dc_color;
+            border-bottom: 2px solid $dc_color;
         }
     }
 }
