--- a/src/assets/scss/partials/_common.scss
+++ b/src/assets/scss/partials/_common.scss
@@ -1,3 +1,5 @@
+@use '../partials/variables' as *;
+
 * {
     margin: 0;
     padding: 0;
@@ -6,4 +8,9 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: $darker;
+}
+
+img {
+    max-width: 100%;
 }
