fix dynamic img main + footer

--- a/src/assets/scss/partials/_footer.scss
+++ b/src/assets/scss/partials/_footer.scss
@@ -48,7 +48,12 @@ footer {
 
             ul {
                 list-style: none;
-                color: $icon;
+                padding-left: 1rem;
+
+                li img {
+                    color: $icon;
+                    width: 1.5rem;
+                }
             }
         }
     }
