--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -16,7 +16,7 @@ main {
         .badge_current_comics {
             position: relative;
 
-            h1 {
+            button {
                 color: $light;
                 background-color: $dc_color;
                 font-size: 1.2rem;
@@ -32,12 +32,21 @@ main {
 
             .card-img-top {
                 img {
-                    height: 15rem;
+                    height: 12rem;
                 }
             }
 
             h4 {
                 font-size: 0.8rem;
+            }
+        }
+
+        .badge_load_more {
+            button {
+                color: $light;
+                background-color: $dc_color;
+                font-size: 0.8rem;
+                padding: 0.5rem 1rem;
             }
         }
     }
